--- a/DuAn1_DongHo/DuAn1_DongHo/App.config
+++ b/DuAn1_DongHo/DuAn1_DongHo/App.config
@@ -15,4 +15,8 @@
   <connectionStrings>
     <add name="QuanLyShopDongHoEntities" connectionString="metadata=res://*/QLShopDongHo.csdl|res://*/QLShopDongHo.ssdl|res://*/QLShopDongHo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G6D16M1;initial catalog=QuanLyShopDongHo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+	<System.Windows.Forms.ApplicationConfigurationSection>
+		<add key="DpiAwareness" value="PerMonitorV2" />
+		<add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
+	</System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
