--- a/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
+++ b/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
@@ -150,6 +150,9 @@
     <Compile Include="SanPham.cs">
       <DependentUpon>QLShopDongHo.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\QLDonHang.resx">
+      <DependentUpon>QLDonHang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -158,6 +161,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -191,6 +195,7 @@
       <DependentUpon>QLShopDongHo.edmx</DependentUpon>
       <LastGenOutput>QLShopDongHo.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\bg1_1.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
