Tạo Solution mới

--- a/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
+++ b/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
@@ -150,6 +150,9 @@
     <Compile Include="SanPham.cs">
       <DependentUpon>QLShopDongHo.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\QLDonHang.resx">
+      <DependentUpon>QLDonHang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
