--- a/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
+++ b/DuAn1_DongHo/DuAn1_DongHo/DuAn1_DongHo.csproj
@@ -150,6 +150,18 @@
     <Compile Include="SanPham.cs">
       <DependentUpon>QLShopDongHo.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\DangNhap.resx">
+      <DependentUpon>DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HuongDan.resx">
+      <DependentUpon>HuongDan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ThongKe.resx">
+      <DependentUpon>ThongKe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrangChu.resx">
+      <DependentUpon>TrangChu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -158,6 +170,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -191,6 +204,21 @@
       <DependentUpon>QLShopDongHo.edmx</DependentUpon>
       <LastGenOutput>QLShopDongHo.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\Exit.png" />
+    <None Include="Resources\bg_dmk.png" />
+    <None Include="Resources\bia.jpg" />
+    <None Include="Resources\icon_Exit.png" />
+    <None Include="Resources\icon_DoiMK.png" />
+    <None Include="Resources\icon_ThongKe.png" />
+    <None Include="Resources\icon_DonHang.png" />
+    <None Include="Resources\icon_KhachHang.png" />
+    <None Include="Resources\icon_PhanLoai.png" />
+    <None Include="Resources\icon_SanPham.png" />
+    <None Include="Resources\icon_NhanVien.png" />
+    <None Include="Resources\earth.png" />
+    <None Include="Resources\bg1_31.jpg" />
+    <None Include="Resources\key1_1.png" />
+    <None Include="Resources\bg1_3.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
