--- a/QL_ShopDongHo/QL_ShopDongHo/QL_ShopDongHo.csproj
+++ b/QL_ShopDongHo/QL_ShopDongHo/QL_ShopDongHo.csproj
@@ -209,6 +209,16 @@
     <None Include="Resources\bg_dmk.png" />
     <None Include="Resources\bg_dmk1.png" />
     <None Include="Resources\bg_kh.jpg" />
+    <None Include="Resources\Search.png" />
+    <None Include="Resources\Add.png" />
+    <None Include="Resources\Price list.png" />
+    <None Include="Resources\Refresh.png" />
+    <None Include="Resources\Delete.png" />
+    <None Include="Resources\Log out.png" />
+    <None Include="Resources\Search1.png" />
+    <None Include="Resources\Edit.png" />
+    <None Include="Resources\Save.png" />
+    <None Include="Resources\Log out1.png" />
     <Content Include="ShopDongHo.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ShopDongHo.edmx</DependentUpon>
