xóa db cũ, tạo mới

--- a/QL_ShopDongHo/QL_ShopDongHo/App.config
+++ b/QL_ShopDongHo/QL_ShopDongHo/App.config
@@ -14,9 +14,10 @@
   </entityFramework>
   <connectionStrings>
     <add name="QuanLyShopDongHoEntities" connectionString="metadata=res://*/ShopDongHo.csdl|res://*/ShopDongHo.ssdl|res://*/ShopDongHo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyShopDongHo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuanLyShopDongHoEntities1" connectionString="metadata=res://*/ShopDongHo.csdl|res://*/ShopDongHo.ssdl|res://*/ShopDongHo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyShopDongHo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-	<System.Windows.Forms.ApplicationConfigurationSection>
-		<add key="DpiAwareness" value="PerMonitorV2" />
-		<add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
-	</System.Windows.Forms.ApplicationConfigurationSection>
+  <System.Windows.Forms.ApplicationConfigurationSection>
+    <add key="DpiAwareness" value="PerMonitorV2" />
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
+  </System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
