--- a/QL_ShopDongHo/QL_ShopDongHo/QL_ShopDongHo.csproj
+++ b/QL_ShopDongHo/QL_ShopDongHo/QL_ShopDongHo.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietSanPham.cs">
+      <DependentUpon>ShopDongHo.tt</DependentUpon>
+    </Compile>
     <Compile Include="DonHang.cs">
       <DependentUpon>ShopDongHo.tt</DependentUpon>
     </Compile>
@@ -122,9 +125,6 @@
       <DependentUpon>TrangChu.cs</DependentUpon>
     </Compile>
     <Compile Include="KhachHang.cs">
-      <DependentUpon>ShopDongHo.tt</DependentUpon>
-    </Compile>
-    <Compile Include="LoaiSanPham.cs">
       <DependentUpon>ShopDongHo.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVien.cs">
@@ -209,6 +209,11 @@
     <None Include="Resources\bg_dmk.png" />
     <None Include="Resources\bg_dmk1.png" />
     <None Include="Resources\bg_kh.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="ShopDongHo.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ShopDongHo.edmx</DependentUpon>
@@ -219,9 +224,6 @@
       <DependentUpon>ShopDongHo.edmx</DependentUpon>
       <LastGenOutput>ShopDongHo.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
