--- a/QuanLyShopDongHo/QuanLyShopDongHo/QuanLyShopDongHo.csproj
+++ b/QuanLyShopDongHo/QuanLyShopDongHo/QuanLyShopDongHo.csproj
@@ -76,12 +76,6 @@
     <Compile Include="Forms\DoiMatKhau.Designer.cs">
       <DependentUpon>DoiMatKhau.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\DoiMKMoi.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\DoiMKMoi.Designer.cs">
-      <DependentUpon>DoiMKMoi.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\HuongDan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,11 +112,11 @@
     <Compile Include="Forms\QuanLySanPham.Designer.cs">
       <DependentUpon>QuanLySanPham.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\QuenMatKhau.cs">
+    <Compile Include="Forms\ThanhToanDonHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\QuenMatKhau.Designer.cs">
-      <DependentUpon>QuenMatKhau.cs</DependentUpon>
+    <Compile Include="Forms\ThanhToanDonHang.Designer.cs">
+      <DependentUpon>ThanhToanDonHang.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ThongKe.cs">
       <SubType>Form</SubType>
@@ -165,9 +159,6 @@
     <EmbeddedResource Include="Forms\DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DoiMKMoi.resx">
-      <DependentUpon>DoiMKMoi.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\HuongDan.resx">
       <DependentUpon>HuongDan.cs</DependentUpon>
     </EmbeddedResource>
@@ -180,8 +171,8 @@
     <EmbeddedResource Include="Forms\QuanLySanPham.resx">
       <DependentUpon>QuanLySanPham.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\QuenMatKhau.resx">
-      <DependentUpon>QuenMatKhau.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ThanhToanDonHang.resx">
+      <DependentUpon>ThanhToanDonHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ThongKe.resx">
       <DependentUpon>ThongKe.cs</DependentUpon>
@@ -256,6 +247,7 @@
     <None Include="Resources\bg_dmk.png" />
     <None Include="Resources\Save.png" />
     <None Include="Resources\bg_dmk1.png" />
+    <None Include="Resources\Price list.png" />
     <Content Include="ShopDongHo.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ShopDongHo.edmx</DependentUpon>
@@ -269,6 +261,35 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Word">
+      <Guid>{00020905-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>8</VersionMajor>
+      <VersionMinor>7</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
