Commit trước khi merge (bắt lỗi hoàn toàn)

--- a/QuanLyShopDongHo/QuanLyShopDongHo/QuanLyShopDongHo.csproj
+++ b/QuanLyShopDongHo/QuanLyShopDongHo/QuanLyShopDongHo.csproj
@@ -171,6 +171,9 @@
     <EmbeddedResource Include="Forms\DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DoiMKMoi.resx">
+      <DependentUpon>DoiMKMoi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\HuongDan.resx">
       <DependentUpon>HuongDan.cs</DependentUpon>
     </EmbeddedResource>
